Body Background: Top-align to prevent shifting on page resize.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,4 +1,4 @@
-#content { padding: 40px 0 80px; background: url("/assets/body_bg.png") repeat center center; }
+#content { padding: 40px 0 80px; background: url("/assets/body_bg.png") repeat top center; }
 
 .jumbotron {
   background-color: rgba(0, 0, 0, 0.025);
